Fix alignment and create card layout

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,3 +1,5 @@
-body {
+html, body {
   background-color: beige;
+  scroll-behavior: smooth;
 }
+
